--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,10 @@
     "homepage" : "http://www.github.com/coogle/CoogleLib",
     "require" : {
         "zendframework/zendframework" : ">2.2.0"
+    },
+    "autoload": {
+        "psr-0": {
+            "CoogleLib\\": "src/"
+        }
     }
 }
