--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
     "autoload": {
         "psr-4": {
             "CoogleLib\\": "src/"
-        }
+        },
+	"classmap" : [
+		"./Module.php"
+	]
     }
 }
