--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,15 @@
     "require" : {
         "zendframework/zendframework" : ">2.2.0"
     },
+    "license" : "BSD-3-Clause",
+    "authors" : [
+    	{
+    		"name" : "John Coggeshall",
+    		"email" : "john@coggeshall.org",
+    		"homepage" : "http://www.coggeshall.org/",
+    		"role" : "Developer"
+    	}
+    ],
     "autoload": {
         "psr-4": {
             "CoogleLib\\": "src/"
